--- a/07_RegressionModels/01_02_notation/index.html
+++ b/07_RegressionModels/01_02_notation/index.html
@@ -51,6 +51,7 @@
       <slide class="" id="slide-1" style="background:;">
   <hgroup>
     <h2>Some basic definitions</h2>
+    <h2>Recreational model analysis.</h2>
   </hgroup>
   <article>
     <ul>
