--- a/07_RegressionModels/03_04_bonus/index.html
+++ b/07_RegressionModels/03_04_bonus/index.html
@@ -164,6 +164,16 @@ fit &lt;- lm(chord ~ x - 1)
 
 <slide class="" id="slide-7" style="background:;">
   <article data-timings="">
+    <h1> Test case 1 </h1>
+    <h1> Test case 2 </h1>
+    <h1> Test case 3 </h1>
+    <h1> Test case 4 </h1>
+    <h1> Test case 5 </h1>
+    <h1> Test case 6 </h1>
+    <h1> Test case 7 </h1>
+    <h1> Test case 8 </h1>
+    <h1> Test case 9 </h1>
+    <h1> Test case 10 </h1>
     <div class="rimage center"><img src="fig/unnamed-chunk-4.png" title="plot of chunk unnamed-chunk-4" alt="plot of chunk unnamed-chunk-4" class="plot" /></div>
 
   </article>
